--- a/Project SE/ui/homescreen.ui
+++ b/Project SE/ui/homescreen.ui
@@ -64,24 +64,6 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="whitebg">
-    <property name="geometry">
-     <rect>
-      <x>160</x>
-      <y>110</y>
-      <width>511</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);
-border: 1px solid rgba(0, 0, 0, 0.3);  
-border-radius: 10px;  </string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="title">
     <property name="geometry">
      <rect>
@@ -382,7 +364,7 @@ border-radius: 10px;  </string>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton#reportbtn{
-    color: rgba(0,0,0, 1);
+    color: rgba(0,0,0, 0.5);
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
@@ -405,7 +387,7 @@ border-radius: 10px;  </string>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton#homebtn{
-    color: rgba(0,0,0, 0.5);
+    color: rgba(0,0,0, 1);
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
@@ -501,196 +483,203 @@ border-radius: 10px;  </string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="salesbtn">
+   <widget class="QLabel" name="dailyIncome">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>120</y>
-      <width>71</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 1);
-    font-family: 'Roboto';
-    font-size: 14px;
-    font-weight: 500;
-	border:none;
-	text-decoration:underline;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Sales</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="DSRbtn">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>120</y>
+      <x>220</x>
+      <y>480</y>
       <width>151</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
-    color: rgba(0,0,0, 1);
-    font-family: 'Roboto';
-    font-size: 14px;
+     <string notr="true">
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 20px;
     font-weight: 500;
-	border:none;
-}
 </string>
     </property>
     <property name="text">
-     <string>Daily Sales Report</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="listofsale">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>210</y>
-      <width>201</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLabel#listofsale{
-    color: #000000;
-    font-family: 'Inter';
-    font-size: 30px;
-    font-weight: 500;
-}</string>
-    </property>
-    <property name="text">
-     <string>List of Sales:</string>
+     <string>Daily Income</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tableWidget">
+   <widget class="QLabel" name="date">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>280</y>
-      <width>951</width>
-      <height>391</height>
-     </rect>
-    </property>
-    <property name="alternatingRowColors">
-     <bool>true</bool>
-    </property>
-    <property name="showGrid">
-     <bool>true</bool>
-    </property>
-    <property name="gridStyle">
-     <enum>Qt::SolidLine</enum>
-    </property>
-    <property name="sortingEnabled">
-     <bool>false</bool>
-    </property>
-    <attribute name="horizontalHeaderCascadingSectionResizes">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="horizontalHeaderMinimumSectionSize">
-     <number>100</number>
-    </attribute>
-    <attribute name="horizontalHeaderDefaultSectionSize">
-     <number>150</number>
-    </attribute>
-    <attribute name="horizontalHeaderStretchLastSection">
-     <bool>true</bool>
-    </attribute>
-    <attribute name="verticalHeaderVisible">
-     <bool>false</bool>
-    </attribute>
-    <column>
-     <property name="text">
-      <string>ID</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Customer</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Amount</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Type of Order</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QPushButton" name="voidbtn">
-    <property name="geometry">
-     <rect>
-      <x>790</x>
-      <y>710</y>
-      <width>151</width>
+      <x>150</x>
+      <y>110</y>
+      <width>241</width>
       <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
-	color: #FFFFFF;
-    background-color: #FB9722;
-    border: 1px solid #888888;
-    border-radius: 20px;
-	font-family: 'Inter';
-    font-size: 17px;
-    font-weight: 400;
-}
-QPushButton:hover {
-	background-color: rgb(255, 167, 25);
-}
-
-QPushButton:pressed {
- 	background-color: #FB9722;
+     <string notr="true">QLabel{
+    color: #FB9722;
+    font-family: 'Inter';
+    font-size: 42px;
+    font-weight: 500;
 }</string>
     </property>
     <property name="text">
-     <string>Void</string>
+     <string>Dashboard</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="viewbtn">
+   <widget class="QLabel" name="titlebar_2">
     <property name="geometry">
      <rect>
-      <x>960</x>
-      <y>710</y>
-      <width>151</width>
+      <x>220</x>
+      <y>190</y>
+      <width>801</width>
+      <height>261</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+border: 1px solid rgba(0, 0, 0, 0.3); 
+border-radius: 5px;   </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="titlebar_3">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>470</y>
+      <width>271</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+border: 1px solid rgba(0, 0, 0, 0.3); 
+border-radius: 5px;   </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="totalLabel">
+    <property name="geometry">
+     <rect>
+      <x>230</x>
+      <y>200</y>
+      <width>161</width>
       <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton{
-	color: #FFFFFF;
-    background-color: #FB9722;
-    border: 1px solid #888888;
-    border-radius: 20px;
-	font-family: 'Inter';
-    font-size: 17px;
-    font-weight: 400;
-}
-QPushButton:hover {
-	background-color: rgb(255, 167, 25);
-}
-
-QPushButton:pressed {
- 	background-color: #FB9722;
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 28px;
+    font-weight: 500;
 }</string>
     </property>
     <property name="text">
-     <string>View</string>
+     <string>Daily sales</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="titlebar_4">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>470</y>
+      <width>501</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+border: 1px solid rgba(0, 0, 0, 0.3);
+border-radius: 5px;    </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="currentEmployee">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>480</y>
+      <width>201</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 20px;
+    font-weight: 500;
+</string>
+    </property>
+    <property name="text">
+     <string>Current Employees</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="listofsale_3">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>580</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 20px;
+    font-weight: 500;
+</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <zorder>titlebar_3</zorder>
+   <zorder>sidebar</zorder>
+   <zorder>titlebar</zorder>
+   <zorder>title</zorder>
+   <zorder>logoutIcon</zorder>
+   <zorder>logoutbtn</zorder>
+   <zorder>settingsbtn</zorder>
+   <zorder>settingIcon</zorder>
+   <zorder>menubtn</zorder>
+   <zorder>p_mIcon</zorder>
+   <zorder>p_managementbtn</zorder>
+   <zorder>homeIcon</zorder>
+   <zorder>reportbtn</zorder>
+   <zorder>homebtn</zorder>
+   <zorder>reportIcon</zorder>
+   <zorder>menuIcon</zorder>
+   <zorder>date</zorder>
+   <zorder>titlebar_2</zorder>
+   <zorder>totalLabel</zorder>
+   <zorder>titlebar_4</zorder>
+   <zorder>currentEmployee</zorder>
+   <zorder>listofsale_3</zorder>
+   <zorder>dailyIncome</zorder>
   </widget>
  </widget>
  <resources>
