--- a/Project SE/ui/reportscreen2.ui
+++ b/Project SE/ui/reportscreen2.ui
@@ -517,7 +517,6 @@ border-radius: 10px;  </string>
     font-size: 14px;
     font-weight: 500;
 	border:none;
-	text-decoration:underline;
 }
 </string>
     </property>
@@ -541,6 +540,7 @@ border-radius: 10px;  </string>
     font-size: 14px;
     font-weight: 500;
 	border:none;
+	text-decoration:underline;
 }
 </string>
     </property>
@@ -551,22 +551,22 @@ border-radius: 10px;  </string>
    <widget class="QLabel" name="listofsale">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>210</y>
-      <width>201</width>
-      <height>51</height>
+      <x>143</x>
+      <y>245</y>
+      <width>221</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel#listofsale{
     color: #000000;
     font-family: 'Inter';
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 500;
 }</string>
     </property>
     <property name="text">
-     <string>List of Sales:</string>
+     <string>List of Today Sales:</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -578,7 +578,7 @@ border-radius: 10px;  </string>
       <x>160</x>
       <y>280</y>
       <width>951</width>
-      <height>391</height>
+      <height>351</height>
      </rect>
     </property>
     <property name="alternatingRowColors">
@@ -615,7 +615,17 @@ border-radius: 10px;  </string>
     </column>
     <column>
      <property name="text">
+      <string>Date</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
       <string>Customer</string>
+     </property>
+    </column>
+    <column>
+     <property name="text">
+      <string>Processed by</string>
      </property>
     </column>
     <column>
@@ -623,44 +633,8 @@ border-radius: 10px;  </string>
       <string>Amount</string>
      </property>
     </column>
-    <column>
-     <property name="text">
-      <string>Type of Order</string>
-     </property>
-    </column>
    </widget>
-   <widget class="QPushButton" name="voidbtn">
-    <property name="geometry">
-     <rect>
-      <x>790</x>
-      <y>710</y>
-      <width>151</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	color: #FFFFFF;
-    background-color: #FB9722;
-    border: 1px solid #888888;
-    border-radius: 20px;
-	font-family: 'Inter';
-    font-size: 17px;
-    font-weight: 400;
-}
-QPushButton:hover {
-	background-color: rgb(255, 167, 25);
-}
-
-QPushButton:pressed {
- 	background-color: #FB9722;
-}</string>
-    </property>
-    <property name="text">
-     <string>Void</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="viewbtn">
+   <widget class="QPushButton" name="printbtn">
     <property name="geometry">
      <rect>
       <x>960</x>
@@ -688,7 +662,138 @@ QPushButton:pressed {
 }</string>
     </property>
     <property name="text">
-     <string>View</string>
+     <string>Print</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="date">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>190</y>
+      <width>111</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 32px;
+    font-weight: 500;
+}</string>
+    </property>
+    <property name="text">
+     <string>DATE:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="boxlabel_date">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>190</y>
+      <width>271</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	padding-left: 3px;
+    color: #FB9722;
+    font-family: 'Inter';
+    font-size: 31px;
+    font-weight: 500;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="titlebar_2">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>630</y>
+      <width>951</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+border: 1px solid rgba(0, 0, 0, 0.3);  </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="titlebar_3">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>630</y>
+      <width>271</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);
+border: 1px solid rgba(0, 0, 0, 0.3);  </string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="totalLabel">
+    <property name="geometry">
+     <rect>
+      <x>430</x>
+      <y>630</y>
+      <width>111</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 28px;
+    font-weight: 500;
+}</string>
+    </property>
+    <property name="text">
+     <string>Total:</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="boxlabel_total">
+    <property name="geometry">
+     <rect>
+      <x>840</x>
+      <y>630</y>
+      <width>271</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+    color: #000000;
+    font-family: 'Inter';
+    font-size: 24px;
+    font-weight: 500;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
   </widget>
