--- a/Project SE/resource.qrc
+++ b/Project SE/resource.qrc
@@ -1,5 +1,13 @@
 <RCC>
   <qresource prefix="icon">
+    <file>icons/password.png</file>
+    <file>icons/username.png</file>
+    <file>icons/home2.png</file>
+    <file>icons/logout2.png</file>
+    <file>icons/menu2.png</file>
+    <file>icons/pmanagement2.png</file>
+    <file>icons/report2.png</file>
+    <file>icons/settings2.png</file>
     <file>icons/placeholder.jpg</file>
     <file>icons/add.png</file>
     <file>icons/cancel.png</file>
@@ -13,7 +21,6 @@
     <file>icons/save.png</file>
     <file>icons/settings.png</file>
     <file>icons/shutdown.png</file>
-    <file>icons/write.png</file>
     <file>icons/add.png</file>
     <file>icons/appearance.png</file>
     <file>icons/cancel.png</file>
