--- a/Project SE/ui/admin_cashierscreen.ui
+++ b/Project SE/ui/admin_cashierscreen.ui
@@ -480,21 +480,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="logoutbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>740</y>
-      <width>71</width>
-      <height>41</height>
+      <x>15</x>
+      <y>750</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#logoutbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Logout</string>
@@ -503,21 +509,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="settingsbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>620</y>
-      <width>75</width>
-      <height>23</height>
+      <x>15</x>
+      <y>670</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#settingsbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Settings</string>
@@ -526,8 +538,8 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QLabel" name="settingIcon">
     <property name="geometry">
      <rect>
-      <x>38</x>
-      <y>580</y>
+      <x>39</x>
+      <y>634</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -568,17 +580,17 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="menubtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>210</y>
-      <width>91</width>
+      <x>15</x>
+      <y>220</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#menubtn{
-    color: rgba(0,0,0, 1);
-    font-family: 'Roboto';
-    font-size: 12px;
+     <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
@@ -591,22 +603,22 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QLabel" name="p_mIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>260</y>
-      <width>35</width>
-      <height>35</height>
+      <x>37</x>
+      <y>270</y>
+      <width>40</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="styleSheet">
@@ -633,21 +645,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="p_managementbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>290</y>
-      <width>91</width>
-      <height>41</height>
+      <x>5</x>
+      <y>310</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#p_managementbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 10px;
+    font-family: 'Inter';
+    font-size: 12px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>P. Management</string>
@@ -698,21 +716,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="reportbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>370</y>
-      <width>91</width>
+      <x>15</x>
+      <y>395</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#reportbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Reports</string>
@@ -721,19 +745,26 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>135</y>
-      <width>91</width>
+      <x>15</x>
+      <y>140</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#homebtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
 }
 </string>
     </property>
@@ -744,8 +775,8 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QLabel" name="reportIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>340</y>
+      <x>39</x>
+      <y>360</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -787,7 +818,7 @@ border: 1px solid rgba(0, 0, 0, 0.3);
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>180</y>
+      <y>190</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -816,13 +847,33 @@ border: 1px solid rgba(0, 0, 0, 0.3);
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/menu.png</pixmap>
+     <pixmap resource="../resource.qrc">:/icon/icons/menu2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>180</y>
+      <width>81</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
    <zorder>whitebg_10</zorder>
@@ -849,14 +900,15 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <zorder>logoutbtn</zorder>
    <zorder>settingsbtn</zorder>
    <zorder>settingIcon</zorder>
-   <zorder>menubtn</zorder>
    <zorder>p_mIcon</zorder>
    <zorder>p_managementbtn</zorder>
    <zorder>homeIcon</zorder>
    <zorder>reportbtn</zorder>
    <zorder>homebtn</zorder>
    <zorder>reportIcon</zorder>
+   <zorder>label_2</zorder>
    <zorder>menuIcon</zorder>
+   <zorder>menubtn</zorder>
   </widget>
  </widget>
  <resources>
