--- a/Project SE/ui/adminprofilescreen.ui
+++ b/Project SE/ui/adminprofilescreen.ui
@@ -162,89 +162,30 @@ border-radius: 5px;  </string>
    <widget class="QPushButton" name="logoutbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>740</y>
-      <width>71</width>
-      <height>41</height>
+      <x>15</x>
+      <y>750</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#logoutbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
-    </property>
-    <property name="text">
-     <string>Logout</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="settingsbtn">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>620</y>
-      <width>75</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton#settingsbtn{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
-    font-weight: 500;
-	border:none;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Settings</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="settingIcon">
-    <property name="geometry">
-     <rect>
-      <x>38</x>
-      <y>580</y>
-      <width>35</width>
-      <height>35</height>
-     </rect>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>35</width>
-      <height>35</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>35</width>
-      <height>35</height>
-     </size>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QLabel#Pmanagementbtn{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 11px;
-    font-weight: 300;
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
 }</string>
     </property>
     <property name="text">
-     <string/>
-    </property>
-    <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/settings.png</pixmap>
-    </property>
-    <property name="scaledContents">
-     <bool>true</bool>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <string>Logout</string>
     </property>
    </widget>
    <widget class="QLabel" name="logoutIcon">
@@ -675,7 +616,7 @@ QPushButton:hover{text-decoration: underline;}</string>
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>180</y>
+      <y>190</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -716,21 +657,27 @@ QPushButton:hover{text-decoration: underline;}</string>
    <widget class="QPushButton" name="reportbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>370</y>
-      <width>91</width>
+      <x>15</x>
+      <y>395</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#reportbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Reports</string>
@@ -781,8 +728,8 @@ QPushButton:hover{text-decoration: underline;}</string>
    <widget class="QLabel" name="reportIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>340</y>
+      <x>39</x>
+      <y>360</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -823,8 +770,137 @@ QPushButton:hover{text-decoration: underline;}</string>
    <widget class="QLabel" name="p_mIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>260</y>
+      <x>37</x>
+      <y>270</y>
+      <width>40</width>
+      <height>40</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>40</width>
+      <height>40</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>40</width>
+      <height>40</height>
+     </size>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel#Pmanagementbtn{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Roboto';
+    font-size: 11px;
+    font-weight: 300;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/productm.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="p_managementbtn">
+    <property name="geometry">
+     <rect>
+      <x>5</x>
+      <y>310</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 12px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>P. Management</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="homebtn">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>140</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 13px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>Home</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="menubtn">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>220</y>
+      <width>81</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+    color: rgba(0,0,0, 0.5);
+    font-family: 'Inter';
+    font-size: 13px;
+    font-weight: 500;
+	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
+    </property>
+    <property name="text">
+     <string>Menu</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="settingIcon">
+    <property name="geometry">
+     <rect>
+      <x>39</x>
+      <y>634</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -853,7 +929,7 @@ QPushButton:hover{text-decoration: underline;}</string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/productm.png</pixmap>
+     <pixmap resource="../resource.qrc">:/icon/icons/settings2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -862,75 +938,84 @@ QPushButton:hover{text-decoration: underline;}</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="p_managementbtn">
+   <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>290</y>
-      <width>91</width>
-      <height>41</height>
+      <x>15</x>
+      <y>625</y>
+      <width>81</width>
+      <height>76</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#p_managementbtn{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 10px;
-    font-weight: 500;
-	border:none;
-}
-</string>
+     <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
     </property>
     <property name="text">
-     <string>P. Management</string>
+     <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="homebtn">
+   <widget class="QPushButton" name="settingsbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>135</y>
-      <width>91</width>
+      <x>15</x>
+      <y>670</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#homebtn{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+     <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
 </string>
     </property>
     <property name="text">
-     <string>Home</string>
+     <string>Settings</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="menubtn">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>210</y>
-      <width>91</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton#menubtn{
-    color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
-    font-weight: 500;
-	border:none;
-}
-</string>
-    </property>
-    <property name="text">
-     <string>Menu</string>
-    </property>
-   </widget>
+   <zorder>sidebar</zorder>
+   <zorder>titlebar</zorder>
+   <zorder>whitebg</zorder>
+   <zorder>title</zorder>
+   <zorder>settings</zorder>
+   <zorder>userprofIcon</zorder>
+   <zorder>logoutbtn</zorder>
+   <zorder>logoutIcon</zorder>
+   <zorder>userprofbtn</zorder>
+   <zorder>editbtn</zorder>
+   <zorder>settings_2</zorder>
+   <zorder>label</zorder>
+   <zorder>appearanceIcon</zorder>
+   <zorder>appearancebtn</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label_3</zorder>
+   <zorder>label_4</zorder>
+   <zorder>boxlabel_name</zorder>
+   <zorder>boxlabel_role</zorder>
+   <zorder>boxlabel_username</zorder>
+   <zorder>image</zorder>
+   <zorder>password</zorder>
+   <zorder>usersIcon</zorder>
+   <zorder>usersbtn</zorder>
+   <zorder>menuIcon</zorder>
+   <zorder>reportbtn</zorder>
+   <zorder>homeIcon</zorder>
+   <zorder>reportIcon</zorder>
+   <zorder>p_mIcon</zorder>
+   <zorder>p_managementbtn</zorder>
+   <zorder>homebtn</zorder>
+   <zorder>menubtn</zorder>
+   <zorder>label_5</zorder>
+   <zorder>settingIcon</zorder>
+   <zorder>settingsbtn</zorder>
   </widget>
  </widget>
  <resources>
