--- a/Project SE/ui/cashierscreen.ui
+++ b/Project SE/ui/cashierscreen.ui
@@ -445,13 +445,14 @@ border: 1px solid rgba(0, 0, 0, 0.3);
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#menubtn{
-    color: rgba(0,0,0, 1);
+     <string notr="true">QPushButton{
+    color: #FB9722;;
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
 	border:none;
 }
+
 </string>
     </property>
     <property name="text">
@@ -491,7 +492,7 @@ border: 1px solid rgba(0, 0, 0, 0.3);
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/menu.png</pixmap>
+     <pixmap resource="../resource.qrc">:/icon/icons/menu2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -503,7 +504,7 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QLabel" name="logoutIcon">
     <property name="geometry">
      <rect>
-      <x>39</x>
+      <x>38</x>
       <y>715</y>
       <width>35</width>
       <height>35</height>
@@ -545,21 +546,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="logoutbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>740</y>
-      <width>71</width>
-      <height>41</height>
+      <x>5</x>
+      <y>750</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#logoutbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Logout</string>
@@ -568,21 +575,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <widget class="QPushButton" name="settingsbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>620</y>
-      <width>75</width>
-      <height>23</height>
+      <x>5</x>
+      <y>616</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#settingsbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
     font-family: 'Roboto';
     font-size: 12px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Settings</string>
@@ -630,6 +643,26 @@ border: 1px solid rgba(0, 0, 0, 0.3);
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>110</y>
+      <width>91</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>whitebg_10</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -650,12 +683,13 @@ border: 1px solid rgba(0, 0, 0, 0.3);
    <zorder>userlistlabel_4</zorder>
    <zorder>userlistlabel_5</zorder>
    <zorder>userlistlabel_6</zorder>
-   <zorder>menubtn</zorder>
-   <zorder>menuIcon</zorder>
    <zorder>logoutIcon</zorder>
    <zorder>logoutbtn</zorder>
    <zorder>settingsbtn</zorder>
    <zorder>settingIcon</zorder>
+   <zorder>label_2</zorder>
+   <zorder>menuIcon</zorder>
+   <zorder>menubtn</zorder>
   </widget>
  </widget>
  <resources>
