--- a/Project SE/ui/homescreen.ui
+++ b/Project SE/ui/homescreen.ui
@@ -138,21 +138,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QPushButton" name="logoutbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>740</y>
-      <width>71</width>
-      <height>41</height>
+      <x>15</x>
+      <y>750</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#logoutbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Logout</string>
@@ -161,21 +167,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QPushButton" name="settingsbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>620</y>
-      <width>75</width>
-      <height>23</height>
+      <x>15</x>
+      <y>670</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#settingsbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Settings</string>
@@ -184,8 +196,8 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QLabel" name="settingIcon">
     <property name="geometry">
      <rect>
-      <x>38</x>
-      <y>580</y>
+      <x>39</x>
+      <y>634</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -226,19 +238,26 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QPushButton" name="menubtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>210</y>
-      <width>91</width>
+      <x>15</x>
+      <y>220</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#menubtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
 }
 </string>
     </property>
@@ -249,22 +268,22 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QLabel" name="p_mIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>260</y>
-      <width>35</width>
-      <height>35</height>
+      <x>37</x>
+      <y>270</y>
+      <width>40</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="styleSheet">
@@ -291,21 +310,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QPushButton" name="p_managementbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>290</y>
-      <width>91</width>
-      <height>41</height>
+      <x>5</x>
+      <y>310</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#p_managementbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 10px;
+    font-family: 'Inter';
+    font-size: 12px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>P. Management</string>
@@ -344,7 +369,7 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/home.png</pixmap>
+     <pixmap resource="../resource.qrc">:/icon/icons/home2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -356,21 +381,27 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QPushButton" name="reportbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>370</y>
-      <width>91</width>
+      <x>15</x>
+      <y>395</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#reportbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Reports</string>
@@ -379,20 +410,21 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>135</y>
-      <width>91</width>
+      <x>15</x>
+      <y>140</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#homebtn{
-    color: rgba(0,0,0, 1);
-    font-family: 'Roboto';
-    font-size: 12px;
+     <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
+
 </string>
     </property>
     <property name="text">
@@ -402,8 +434,8 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QLabel" name="reportIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>340</y>
+      <x>39</x>
+      <y>360</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -445,7 +477,7 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>180</y>
+      <y>190</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -808,6 +840,39 @@ border-radius: 5px;    </string>
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>100</y>
+      <width>81</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="Time">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>80</y>
+      <width>221</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>borderbox_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
@@ -819,9 +884,7 @@ border-radius: 5px;    </string>
    <zorder>menubtn</zorder>
    <zorder>p_mIcon</zorder>
    <zorder>p_managementbtn</zorder>
-   <zorder>homeIcon</zorder>
    <zorder>reportbtn</zorder>
-   <zorder>homebtn</zorder>
    <zorder>reportIcon</zorder>
    <zorder>menuIcon</zorder>
    <zorder>date</zorder>
@@ -834,6 +897,10 @@ border-radius: 5px;    </string>
    <zorder>peso</zorder>
    <zorder>tableWidget</zorder>
    <zorder>boxlabel_sale</zorder>
+   <zorder>label_2</zorder>
+   <zorder>homeIcon</zorder>
+   <zorder>homebtn</zorder>
+   <zorder>Time</zorder>
   </widget>
  </widget>
  <resources>
