--- a/Project SE/ui/reportscreen2.ui
+++ b/Project SE/ui/reportscreen2.ui
@@ -34,7 +34,7 @@
     <property name="geometry">
      <rect>
       <x>-10</x>
-      <y>-30</y>
+      <y>20</y>
       <width>121</width>
       <height>891</height>
      </rect>
@@ -156,21 +156,27 @@ border-radius: 10px;  </string>
    <widget class="QPushButton" name="logoutbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>740</y>
-      <width>71</width>
-      <height>41</height>
+      <x>15</x>
+      <y>750</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#logoutbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Logout</string>
@@ -179,21 +185,27 @@ border-radius: 10px;  </string>
    <widget class="QPushButton" name="settingsbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>620</y>
-      <width>75</width>
-      <height>23</height>
+      <x>15</x>
+      <y>670</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#settingsbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Settings</string>
@@ -202,8 +214,8 @@ border-radius: 10px;  </string>
    <widget class="QLabel" name="settingIcon">
     <property name="geometry">
      <rect>
-      <x>38</x>
-      <y>580</y>
+      <x>39</x>
+      <y>634</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -244,21 +256,27 @@ border-radius: 10px;  </string>
    <widget class="QPushButton" name="menubtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>210</y>
-      <width>91</width>
+      <x>15</x>
+      <y>220</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#menubtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Menu</string>
@@ -267,22 +285,22 @@ border-radius: 10px;  </string>
    <widget class="QLabel" name="p_mIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>260</y>
-      <width>35</width>
-      <height>35</height>
+      <x>37</x>
+      <y>270</y>
+      <width>40</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="styleSheet">
@@ -309,21 +327,27 @@ border-radius: 10px;  </string>
    <widget class="QPushButton" name="p_managementbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>290</y>
-      <width>91</width>
-      <height>41</height>
+      <x>5</x>
+      <y>310</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#p_managementbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 10px;
+    font-family: 'Inter';
+    font-size: 12px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>P. Management</string>
@@ -374,17 +398,17 @@ border-radius: 10px;  </string>
    <widget class="QPushButton" name="reportbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>370</y>
-      <width>91</width>
+      <x>15</x>
+      <y>395</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#reportbtn{
-    color: rgba(0,0,0, 1);
-    font-family: 'Roboto';
-    font-size: 12px;
+     <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
@@ -397,21 +421,27 @@ border-radius: 10px;  </string>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>135</y>
-      <width>91</width>
+      <x>15</x>
+      <y>140</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#homebtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Home</string>
@@ -420,8 +450,8 @@ border-radius: 10px;  </string>
    <widget class="QLabel" name="reportIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>340</y>
+      <x>39</x>
+      <y>360</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -450,7 +480,7 @@ border-radius: 10px;  </string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/report.png</pixmap>
+     <pixmap resource="../resource.qrc">:/icon/icons/report2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -463,7 +493,7 @@ border-radius: 10px;  </string>
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>180</y>
+      <y>190</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -775,7 +805,7 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
    <widget class="QDateEdit" name="dateEdit">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>260</x>
       <y>190</y>
       <width>231</width>
       <height>41</height>
@@ -840,6 +870,55 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>350</y>
+      <width>81</width>
+      <height>76</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>sidebar</zorder>
+   <zorder>titlebar</zorder>
+   <zorder>whitebg</zorder>
+   <zorder>title</zorder>
+   <zorder>logoutIcon</zorder>
+   <zorder>logoutbtn</zorder>
+   <zorder>settingsbtn</zorder>
+   <zorder>settingIcon</zorder>
+   <zorder>menubtn</zorder>
+   <zorder>p_mIcon</zorder>
+   <zorder>p_managementbtn</zorder>
+   <zorder>homeIcon</zorder>
+   <zorder>homebtn</zorder>
+   <zorder>menuIcon</zorder>
+   <zorder>salesbtn</zorder>
+   <zorder>DSRbtn</zorder>
+   <zorder>listofsale</zorder>
+   <zorder>tableWidget</zorder>
+   <zorder>printbtn</zorder>
+   <zorder>date</zorder>
+   <zorder>titlebar_2</zorder>
+   <zorder>titlebar_3</zorder>
+   <zorder>totalLabel</zorder>
+   <zorder>boxlabel_total</zorder>
+   <zorder>dateEdit</zorder>
+   <zorder>peso</zorder>
+   <zorder>label_2</zorder>
+   <zorder>reportIcon</zorder>
+   <zorder>reportbtn</zorder>
   </widget>
  </widget>
  <resources>
