--- a/Project SE/ui/settingscreen.ui
+++ b/Project SE/ui/settingscreen.ui
@@ -212,22 +212,22 @@ border-radius: 5px;  </string>
    <widget class="QLabel" name="p_mIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>260</y>
-      <width>35</width>
-      <height>35</height>
+      <x>37</x>
+      <y>270</y>
+      <width>40</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="minimumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
-      <width>35</width>
-      <height>35</height>
+      <width>40</width>
+      <height>40</height>
      </size>
     </property>
     <property name="styleSheet">
@@ -254,19 +254,26 @@ border-radius: 5px;  </string>
    <widget class="QPushButton" name="logoutbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>740</y>
-      <width>71</width>
-      <height>41</height>
+      <x>15</x>
+      <y>750</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#logoutbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
 }
 </string>
     </property>
@@ -277,17 +284,17 @@ border-radius: 5px;  </string>
    <widget class="QPushButton" name="settingsbtn">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>620</y>
-      <width>75</width>
-      <height>23</height>
+      <x>15</x>
+      <y>670</y>
+      <width>81</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#settingsbtn{
-    color: rgba(0,0,0, 1);
-    font-family: 'Roboto';
-    font-size: 12px;
+     <string notr="true">QPushButton{
+    color: #FB9722;;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
@@ -300,21 +307,27 @@ border-radius: 5px;  </string>
    <widget class="QPushButton" name="p_managementbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>290</y>
-      <width>91</width>
-      <height>41</height>
+      <x>5</x>
+      <y>310</y>
+      <width>101</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#p_managementbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 10px;
+    font-family: 'Inter';
+    font-size: 12px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>P. Management</string>
@@ -323,21 +336,27 @@ border-radius: 5px;  </string>
    <widget class="QPushButton" name="homebtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>135</y>
-      <width>91</width>
+      <x>15</x>
+      <y>140</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#homebtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Home</string>
@@ -346,21 +365,27 @@ border-radius: 5px;  </string>
    <widget class="QPushButton" name="menubtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>210</y>
-      <width>91</width>
+      <x>15</x>
+      <y>220</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#menubtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
 }
-</string>
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
+}</string>
     </property>
     <property name="text">
      <string>Menu</string>
@@ -369,19 +394,26 @@ border-radius: 5px;  </string>
    <widget class="QPushButton" name="reportbtn">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>370</y>
-      <width>91</width>
+      <x>15</x>
+      <y>395</y>
+      <width>81</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QPushButton#reportbtn{
+     <string notr="true">QPushButton{
     color: rgba(0,0,0, 0.5);
-    font-family: 'Roboto';
-    font-size: 12px;
+    font-family: 'Inter';
+    font-size: 13px;
     font-weight: 500;
 	border:none;
+}
+
+QPushButton:hover{
+color: #FB9722;
+border: 2px solid #FB9722;
+border-radius: 8px;
+background-color: rgba(255, 167, 25, 0.1);
 }
 </string>
     </property>
@@ -393,7 +425,7 @@ border-radius: 5px;  </string>
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>180</y>
+      <y>190</y>
       <width>30</width>
       <height>30</height>
      </rect>
@@ -476,8 +508,8 @@ border-radius: 5px;  </string>
    <widget class="QLabel" name="reportIcon">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>340</y>
+      <x>39</x>
+      <y>360</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -518,8 +550,8 @@ border-radius: 5px;  </string>
    <widget class="QLabel" name="settingIcon">
     <property name="geometry">
      <rect>
-      <x>38</x>
-      <y>580</y>
+      <x>39</x>
+      <y>634</y>
       <width>35</width>
       <height>35</height>
      </rect>
@@ -548,7 +580,7 @@ border-radius: 5px;  </string>
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap resource="../resource.qrc">:/icon/icons/settings.png</pixmap>
+     <pixmap resource="../resource.qrc">:/icon/icons/settings2.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -693,6 +725,51 @@ QPushButton:hover{text-decoration: underline;}</string>
      </size>
     </property>
    </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>625</y>
+      <width>81</width>
+      <height>76</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	background-color: rgba(255, 167, 25, 0.1);
+	border: 2px solid #FB9722;
+	border-radius: 8px;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>sidebar</zorder>
+   <zorder>titlebar</zorder>
+   <zorder>whitebg</zorder>
+   <zorder>title</zorder>
+   <zorder>settings</zorder>
+   <zorder>userprofIcon</zorder>
+   <zorder>appearanceIcon</zorder>
+   <zorder>usersIcon</zorder>
+   <zorder>p_mIcon</zorder>
+   <zorder>logoutbtn</zorder>
+   <zorder>p_managementbtn</zorder>
+   <zorder>homebtn</zorder>
+   <zorder>menubtn</zorder>
+   <zorder>reportbtn</zorder>
+   <zorder>menuIcon</zorder>
+   <zorder>homeIcon</zorder>
+   <zorder>reportIcon</zorder>
+   <zorder>logoutIcon</zorder>
+   <zorder>userprofbtn</zorder>
+   <zorder>appearancebtn</zorder>
+   <zorder>usersbtn</zorder>
+   <zorder>editbtn</zorder>
+   <zorder>label_2</zorder>
+   <zorder>settingIcon</zorder>
+   <zorder>settingsbtn</zorder>
   </widget>
  </widget>
  <resources>
