--- a/Project SE/ui/homescreen.ui
+++ b/Project SE/ui/homescreen.ui
@@ -26,7 +26,11 @@
     <enum>Qt::LeftToRight</enum>
    </property>
    <property name="styleSheet">
-    <string notr="true">QWidget#bgwidget{background-color: rgb(236, 236, 236);}
+    <string notr="true">QWidget#bgwidget{
+
+ background-color: rgb(236, 236, 236);
+
+}
 
 </string>
    </property>
@@ -74,14 +78,15 @@ border: 1px solid rgba(0, 0, 0, 0.3);  </string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">QLabel#title{
+     <string notr="true">QLabel{
 	color: #FB9722;
     font-family: Sacramento;
-    font-size: 52px;
+    font-size: 58px;
     font-weight: 400;
     padding-bottom: 5px;
     text-align: center;
-}</string>
+}
+</string>
     </property>
     <property name="text">
      <string>Oriental Dua Restaurant</string>
@@ -518,15 +523,14 @@ background-color: rgba(255, 167, 25, 0.1);
    <widget class="QLabel" name="dailyIncome">
     <property name="geometry">
      <rect>
-      <x>220</x>
-      <y>480</y>
-      <width>151</width>
+      <x>245</x>
+      <y>595</y>
+      <width>131</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">
-    color: #FB9722;
+     <string notr="true">    color: #000000;
     font-family: 'Inter';
     font-size: 20px;
     font-weight: 500;
@@ -542,7 +546,7 @@ background-color: rgba(255, 167, 25, 0.1);
    <widget class="QLabel" name="date">
     <property name="geometry">
      <rect>
-      <x>150</x>
+      <x>210</x>
       <y>110</y>
       <width>241</width>
       <height>41</height>
@@ -573,7 +577,7 @@ background-color: rgba(255, 167, 25, 0.1);
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);
+     <string notr="true">background-color: rgb(255, 174, 82);
 border: 1px solid rgba(0, 0, 0, 0.3); 
 border-radius: 5px;   </string>
     </property>
@@ -591,9 +595,9 @@ border-radius: 5px;   </string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);
-border: 1px solid rgba(0, 0, 0, 0.3); 
-border-radius: 5px;   </string>
+     <string notr="true">background-color: rgb(255, 174, 82);
+border: 1px solid rgba(0, 0, 0, 0.7); 
+border-radius: 10px;   </string>
     </property>
     <property name="text">
      <string/>
@@ -602,25 +606,22 @@ border-radius: 5px;   </string>
    <widget class="QLabel" name="totalLabel">
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>250</x>
       <y>200</y>
-      <width>161</width>
+      <width>241</width>
       <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
-    color: #FB9722;
+    color: #000000;
     font-family: 'Inter';
     font-size: 28px;
     font-weight: 500;
 }</string>
     </property>
     <property name="text">
-     <string>Daily sales</string>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <string>Daily sales count: </string>
     </property>
    </widget>
    <widget class="QLabel" name="borderbox_3">
@@ -633,7 +634,7 @@ border-radius: 5px;   </string>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 255, 255);
+     <string notr="true">background-color: rgb(255, 174, 82);
 border: 1px solid rgba(0, 0, 0, 0.3);
 border-radius: 5px;    </string>
     </property>
@@ -644,17 +645,16 @@ border-radius: 5px;    </string>
    <widget class="QLabel" name="currentEmployee">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>480</y>
-      <width>221</width>
+      <x>565</x>
+      <y>475</y>
+      <width>241</width>
       <height>31</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">
-    color: #FB9722;
-    font-family: 'Inter';
-    font-size: 20px;
+     <string notr="true">	color: #000000;
+    font-family: 'Roboto';
+    font-size: 24px;
     font-weight: 500;
 </string>
     </property>
@@ -662,28 +662,28 @@ border-radius: 5px;    </string>
      <string>Top Selling Products</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="boxlabel_total">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>560</y>
-      <width>131</width>
+      <x>280</x>
+      <y>625</y>
+      <width>191</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">
-    color: #FB9722;
+    color: #FFFFFF;
     font-family: 'Inter';
-    font-size: 36px;
+    font-size: 42px;
     font-weight: 500;
 </string>
     </property>
     <property name="text">
-     <string/>
+     <string>00.00</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -692,18 +692,18 @@ border-radius: 5px;    </string>
    <widget class="QLabel" name="peso">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>550</y>
-      <width>61</width>
-      <height>81</height>
+      <x>235</x>
+      <y>631</y>
+      <width>51</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
     color: #000000;
     font-family: 'Inter';
-    font-size: 44px;
-    font-weight: 500;
+    font-size: 50px;
+    font-weight: 400;
 }</string>
     </property>
     <property name="text">
@@ -730,6 +730,9 @@ border-radius: 5px;    </string>
     </property>
     <property name="autoFillBackground">
      <bool>true</bool>
+    </property>
+    <property name="styleSheet">
+     <string notr="true"/>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
@@ -820,21 +823,21 @@ border-radius: 5px;    </string>
    <widget class="QLabel" name="boxlabel_sale">
     <property name="geometry">
      <rect>
-      <x>560</x>
-      <y>290</y>
-      <width>191</width>
-      <height>81</height>
+      <x>490</x>
+      <y>200</y>
+      <width>81</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">	color: #FB9722;
+     <string notr="true">	color: #FFFFFF;
     font-family: 'Inter';
     font-size: 36px;
     font-weight: 500;
 </string>
     </property>
     <property name="text">
-     <string/>
+     <string>0</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -860,47 +863,281 @@ border-radius: 5px;    </string>
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="Time">
+   <widget class="QTableWidget" name="tableWidget_2">
     <property name="geometry">
      <rect>
-      <x>940</x>
-      <y>80</y>
-      <width>221</width>
-      <height>21</height>
+      <x>250</x>
+      <y>240</y>
+      <width>741</width>
+      <height>192</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="dashboardimg">
+    <property name="geometry">
+     <rect>
+      <x>150</x>
+      <y>100</y>
+      <width>61</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/layout.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
    </widget>
-   <widget class="QLabel" name="totalLabel_2">
+   <widget class="QLabel" name="pesoimg">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>310</y>
-      <width>161</width>
+      <x>245</x>
+      <y>500</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/peso.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="dashboardimg_2">
+    <property name="geometry">
+     <rect>
+      <x>940</x>
+      <y>90</y>
+      <width>141</width>
+      <height>161</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/coca-leaves.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="time">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>170</y>
+      <width>331</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	
+	
+	color: rgb(0, 170, 0);
+    font-family: 'Roboto';
+    font-size: 18px;
+    font-weight: 400;
+}</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="Line" name="navline">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>798</y>
+      <width>1200</width>
+      <height>3</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:2px solid #FB9722 ;
+</string>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="navline_3">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>70</y>
+      <width>1200</width>
+      <height>3</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:2px solid #FB9722 ;
+</string>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>0</y>
+      <width>3</width>
+      <height>810</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:2px solid #FB9722 ;</string>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="lineWidth">
+     <number>2</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="Line" name="line_2">
+    <property name="geometry">
+     <rect>
+      <x>1197</x>
+      <y>0</y>
+      <width>3</width>
+      <height>810</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border:2px solid #FB9722 ;</string>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="lineWidth">
+     <number>2</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Vertical</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="dailyimg">
+    <property name="geometry">
+     <rect>
+      <x>300</x>
+      <y>500</y>
+      <width>51</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/24-hours.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="topimg">
+    <property name="geometry">
+     <rect>
+      <x>530</x>
+      <y>475</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap resource="../resource.qrc">:/icon/icons/badge.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="date_3">
+    <property name="geometry">
+     <rect>
+      <x>211</x>
+      <y>111</y>
+      <width>241</width>
       <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QLabel{
-    color: #00000;
+	color: rgba(0, 0, 0, 155);
     font-family: 'Inter';
-    font-size: 28px;
+    font-size: 42px;
     font-weight: 500;
 }</string>
     </property>
     <property name="text">
-     <string>No. of Sale:</string>
+     <string>Dashboard</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
+   <widget class="QLabel" name="title_3">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>12</y>
+      <width>1201</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+color: rgba(0, 0, 0, 100);
+    font-family: Sacramento;
+    font-size: 58px;
+    font-weight: 400;
+    padding-bottom: 5px;
+    text-align: center;
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Oriental Dua Restaurant</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <zorder>date_3</zorder>
+   <zorder>date</zorder>
+   <zorder>line_2</zorder>
+   <zorder>line</zorder>
+   <zorder>navline_3</zorder>
+   <zorder>navline</zorder>
    <zorder>borderbox_2</zorder>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
-   <zorder>title</zorder>
    <zorder>logoutIcon</zorder>
    <zorder>logoutbtn</zorder>
    <zorder>settingsbtn</zorder>
@@ -911,7 +1148,6 @@ border-radius: 5px;    </string>
    <zorder>reportbtn</zorder>
    <zorder>reportIcon</zorder>
    <zorder>menuIcon</zorder>
-   <zorder>date</zorder>
    <zorder>borderbox</zorder>
    <zorder>totalLabel</zorder>
    <zorder>borderbox_3</zorder>
@@ -924,8 +1160,15 @@ border-radius: 5px;    </string>
    <zorder>label_2</zorder>
    <zorder>homeIcon</zorder>
    <zorder>homebtn</zorder>
-   <zorder>Time</zorder>
-   <zorder>totalLabel_2</zorder>
+   <zorder>tableWidget_2</zorder>
+   <zorder>dashboardimg</zorder>
+   <zorder>pesoimg</zorder>
+   <zorder>dashboardimg_2</zorder>
+   <zorder>time</zorder>
+   <zorder>dailyimg</zorder>
+   <zorder>topimg</zorder>
+   <zorder>title_3</zorder>
+   <zorder>title</zorder>
   </widget>
  </widget>
  <resources>
