--- a/Project SE/ui/pmanagementscreen.ui
+++ b/Project SE/ui/pmanagementscreen.ui
@@ -95,7 +95,7 @@ border-radius: 10px;  </string>
      <string notr="true">QLabel#title{
 	color: #FB9722;
     font-family: Sacramento;
-    font-size: 52px;
+    font-size: 58px;
     font-weight: 400;
     padding-bottom: 5px;
     text-align: center;
@@ -636,26 +636,27 @@ background-color: rgba(255, 167, 25, 0.1);
      <rect>
       <x>160</x>
       <y>700</y>
-      <width>151</width>
-      <height>41</height>
+      <width>161</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
 	color: #FFFFFF;
-    background-color: #FB9722;
+    background-color: #F84A4A;
     border: 1px solid #888888;
-    border-radius: 20px;
+    border-radius: 15px;
 	font-family: 'Inter';
-    font-size: 17px;
+    font-size: 24px;
     font-weight: 400;
 }
 QPushButton:hover {
-	background-color: rgb(255, 167, 25);
+	
+	background-color: rgb(255, 85, 73);
 }
 
 QPushButton:pressed {
- 	background-color: #FB9722;
+ 	background-color: #F84A4A;
 }</string>
     </property>
     <property name="text">
@@ -689,28 +690,28 @@ QPushButton:pressed {
    <widget class="QPushButton" name="addbtn">
     <property name="geometry">
      <rect>
-      <x>960</x>
+      <x>950</x>
       <y>700</y>
-      <width>151</width>
-      <height>41</height>
+      <width>161</width>
+      <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton{
 	color: #FFFFFF;
-    background-color: #FB9722;
+    background-color: #009B19;
     border: 1px solid #888888;
-    border-radius: 20px;
+    border-radius: 15px;
 	font-family: 'Inter';
-    font-size: 17px;
+    font-size: 24px;
     font-weight: 400;
 }
 QPushButton:hover {
-	background-color: rgb(255, 167, 25);
+	background-color: rgb(0, 175, 26);
 }
 
 QPushButton:pressed {
- 	background-color: #FB9722;
+  background-color: #009B19;
 }</string>
     </property>
     <property name="text">
@@ -1127,10 +1128,39 @@ color: rgb(255, 0, 0);</string>
      </property>
     </item>
    </widget>
+   <widget class="QLabel" name="title_3">
+    <property name="geometry">
+     <rect>
+      <x>1</x>
+      <y>11</y>
+      <width>1201</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+color: rgba(0, 0, 0, 80);
+    font-family: Sacramento;
+    font-size: 58px;
+    font-weight: 400;
+    padding-bottom: 5px;
+    text-align: center;
+}
+</string>
+    </property>
+    <property name="text">
+     <string>Oriental Dua Restaurant</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
    <zorder>sidebar</zorder>
    <zorder>titlebar</zorder>
    <zorder>whitebg</zorder>
-   <zorder>title</zorder>
    <zorder>logoutIcon</zorder>
    <zorder>logoutbtn</zorder>
    <zorder>settingsbtn</zorder>
@@ -1163,6 +1193,8 @@ color: rgb(255, 0, 0);</string>
    <zorder>p_mIcon</zorder>
    <zorder>p_managementbtn</zorder>
    <zorder>comboBox</zorder>
+   <zorder>title_3</zorder>
+   <zorder>title</zorder>
   </widget>
  </widget>
  <resources>
