--- a/Project SE/ui/userscreen.ui
+++ b/Project SE/ui/userscreen.ui
@@ -284,6 +284,9 @@ border-radius: 5px;  </string>
       <height>431</height>
      </rect>
     </property>
+    <property name="editTriggers">
+     <set>QAbstractItemView::NoEditTriggers</set>
+    </property>
     <property name="alternatingRowColors">
      <bool>true</bool>
     </property>
